# card-reader

./: .dockerignore  .editorconfig  .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  README.md  docker-compose.yml  docs.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
services/api/: Dockerfile  README.md  alembic.ini  manage.py  package.json  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260417_0001_initial_schema.py  20260419_0002_symbol_detection_fields.py  20260419_0003_symbol_type.py  20260419_0004_templates.py
services/api/src/: database_migrations.py  main.py
services/api/src/card_reader_api/: __init__.py  apps.py  database_migrations.py  desktop_main.py  desktop_supervisor.py  main.py  settings.py
services/api/src/card_reader_api/access_requests/: __init__.py  serializers.py  views.py
services/api/src/card_reader_api/application/: services.py
services/api/src/card_reader_api/auth/: activity.py  password_flow.py  urls.py  views.py
services/api/src/card_reader_api/card_backs/: __init__.py  serializers.py  urls.py  views.py
services/api/src/card_reader_api/card_groups/: serializers.py  urls.py  views.py
services/api/src/card_reader_api/card_merges/: serializers.py  urls.py  views.py
services/api/src/card_reader_api/cards/: deck_references.py  file_views.py  grouped_gallery.py  public_urls.py  query_params.py  serializers.py  services.py  urls.py  views.py
services/api/src/card_reader_api/catalog/: assets.py  serializers.py  urls.py  views.py
services/api/src/card_reader_api/common/: auth_access.py  cors.py  permissions.py  responses.py  views.py
services/api/src/card_reader_api/content_versions/: __init__.py  serializers.py  urls.py  views.py
services/api/src/card_reader_api/controllers/: __init__.py  cards_controller.py  exports_controller.py  imports_controller.py  settings_controller.py
services/api/src/card_reader_api/decks/: serializers.py  urls.py  views.py
services/api/src/card_reader_api/dependencies/: __init__.py  services.py
services/api/src/card_reader_api/domain/: __init__.py
services/api/src/card_reader_api/exports/: tts.py  urls.py  views.py
services/api/src/card_reader_api/imports/: serializers.py  urls.py  views.py
services/api/src/card_reader_api/infrastructure/: db.py  logging_utils.py  models.py  parser.py  repositories.py  storage.py
services/api/src/card_reader_api/maintenance/: services.py  urls.py  views.py
services/api/src/card_reader_api/mappers/: __init__.py  cards.py  imports.py
services/api/src/card_reader_api/notifications/: serializers.py  urls.py  views.py
services/api/src/card_reader_api/project/: asgi.py  settings.py  urls.py  wsgi.py
services/api/src/card_reader_api/review/: __init__.py  serializers.py  urls.py  views.py
services/api/src/card_reader_api/router/: __init__.py
services/api/src/card_reader_api/schemas/: __init__.py  requests.py  responses.py
services/api/src/controllers/: __init__.py  cards_controller.py  exports_controller.py  imports_controller.py  settings_controller.py
services/api/src/dependencies/: __init__.py  services.py
services/api/src/mappers/: __init__.py  cards.py  imports.py
services/api/src/router/: __init__.py
services/api/src/schemas/: __init__.py  requests.py  responses.py
services/api/src/seeds/: __init__.py  __main__.py  keywords.json  keywords.py  runner.py  shared.py  symbols.json  symbols.py  templates.json  templates.py
services/api/src/services/: __init__.py  card_service.py  catalog_service.py  export_service.py  import_service.py  maintenance_service.py  template_service.py
services/api/tests/: conftest.py  test_api.py  test_card_backs.py  test_decks.py  test_exports.py  test_notifications.py  test_parse_flags.py  test_settings_controller.py  test_user_management.py
services/core/: README.md  package.json  pyproject.toml
services/core/seeds/: keywords.txt
services/core/src/: core_logging.py  settings.py  storage.py
services/core/src/card_reader_core/: __init__.py  apps.py  backups.py  core_logging.py  django_settings.py  metadata_matching.py  metadata_suggestions.py  rule_text.py  settings.py  storage.py
services/core/src/database/: __init__.py  connection.py
services/core/src/models/: __init__.py  base.py  card.py  card_version.py  import_job.py  metadata.py  template.py
services/core/src/repositories/: __init__.py  cards_repository.py  exports_repository.py  helpers.py  import_jobs_repository.py  metadata_repository.py  templates_repository.py
services/core/tests/: test_backups.py  test_card_lifecycle.py  test_image_storage.py
services/integration/: README.md  package.json  pyproject.toml
services/integration/tests/: catalog_seed.py  conftest.py  helpers.py  runtime.py  test_card_edit_reparse.py  test_catalog_contract.py  test_metadata_suggestions.py  test_parser_db_full_flow_cases.py
services/parser/: Dockerfile  README.md  package.json  pyproject.toml
services/parser/src/: main.py  template_store.py
services/parser/src/card_reader_parser/: main.py  template_store.py
services/parser/src/extractors/: __init__.py  keywords_extractor.py  tags_extractor.py  types_extractor.py
services/parser/src/parsers/: __init__.py  card_parser.py  field_normalizer.py  ocr_runner.py  region_cropper.py  symbol_detector.py  types.py
services/parser/src/services/: __init__.py  import_processor_service.py
services/parser/tests/: conftest.py  test_bottom_region_parser.py  test_card_parser.py  test_keywords_extractor.py  test_known_metadata_extractor.py  test_middle_region_parser.py  test_name_mana_cost_parser.py  test_ocr_runner.py  test_region_cropper.py  test_rule_text_enricher.py  test_stats_region_parser.py  test_symbol_detector.py  test_types_extractor.py
services/worker/: README.md  package.json  pyproject.toml
services/worker/src/card_reader_worker/: main.py
(+728 files in other folders)
