[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "card-reader-api"
version = "0.1.0"
description = "Card Reader API service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "card-reader-core",
  "alembic>=1.13.3",
  "fastapi>=0.115.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "python-multipart>=0.0.12",
  "sqlmodel>=0.0.22",
  "uvicorn>=0.31.0"
]

[tool.uv.sources]
card-reader-core = { path = "../core", editable = true }

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["main", "database_migrations"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["controllers*", "dependencies*", "mappers*", "router*", "schemas*", "seeds*", "services*"]

[tool.setuptools.package-data]
"seeds" = ["*.txt", "*.json", "assets/**/*"]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "httpx>=0.27.2",
  "ruff>=0.6.9",
  "watchfiles>=0.24.0"
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]
