[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "card-reader-core"
version = "0.1.10"
description = "Shared core runtime and data layer for Card Reader services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django>=5.1.0",
  "pydantic-settings>=2.5.2"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["card_reader_core*"]

[tool.setuptools.package-data]
card_reader_core = ["py.typed"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "mypy>=1.11.2",
    "ruff>=0.6.9",
    "django-stubs>=6.0.3",
]
