[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "card-reader-integration"
version = "0.1.10"
description = "Cross-package integration tests for Card Reader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "card-reader-api",
  "card-reader-core",
  "card-reader-parser",
  "paddlepaddle>=3.1.0",
  "paddleocr>=3.1.0",
  "paddlex[ocr-core]>=3.1.0",
  "pillow>=10.4.0",
  "pydantic-settings>=2.5.2"
]

[tool.pytest.ini_options]
pythonpath = ["tests", "../parser/src", "../api/src", "../core/src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
files = ["tests"]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[dependency-groups]
dev = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]
