[package]
name = "card-reader-desktop"
version = "0.1.7"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
